2011-03-16  Vangelis Kokkevis  <vangelis@chromium.org>

Reviewed by Kenneth Russell.

        [chromium] Adding a new test for transformed layer with backface
        visibility set to hidden.
        https://bugs.webkit.org/show_bug.cgi?id=56237

        * platform/chromium/compositing/backface-visibility-transformed-expected.checksum: Added.
        * platform/chromium/compositing/backface-visibility-transformed-expected.png: Added.
        * platform/chromium/compositing/backface-visibility-transformed-expected.txt: Added.
        * platform/chromium/compositing/backface-visibility-transformed.html: Added.
2011-03-16  Vangelis Kokkevis  <vangelis@chromium.org>

        Reviewed by Kenneth Russell.

        [chromium] Fixing backface visibility for transformed layers.
        https://bugs.webkit.org/show_bug.cgi?id=56237

        Test: platform/chromium/compositing/backface-visibility-transformed.html

        * platform/graphics/chromium/LayerRendererChromium.cpp:
        (WebCore::LayerRendererChromium::drawLayer):


Canonical link: https://commits.webkit.org/71164@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81288 268f45cc-cd09-0410-ab3c-d52691b4dbfc